--- a/.github/workflows/first-demo.yml
+++ b/.github/workflows/first-demo.yml
@@ -20,10 +20,6 @@ jobs:
         java-version: '17'
         distribution: 'temurin'
         cache: maven
-    - name: Test running command
-      run: |
-        echo "Hello world"
-        echo "run multiple command"
-    - name: goodbye
-      run: echo "Good bye"
+    - name: Build with Maven
+      run: mvn -B clean package --file pom.xml
     
