--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -28,6 +28,8 @@ jobs:
       run: mvn  --batch-mode --errors --fail-at-end --show-version -DinstallAtEnd=false -DdeployAtEnd=false -Drevision=$VERSION clean package -DskipTests=true
   # if second job presented in the workflow, it will be run parallel with the first job
   deploy:
+    # by using needs, we can specify which job should be completed first before this job run
+    needs: test-and-build
     runs-on: ubuntu-latest
     steps:
     - name: Pull/download the codes
