--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -77,6 +77,6 @@ jobs:
     - name: Download build artifact
       uses: actions/download-artifact@v4
       with:
-        name: ${{ steps.get-app-name.outputs.app_name }}-${{ steps.get-version.outputs.version }}
+        name: ${{ needs.build.outputs.app_name }}-${{ needs.build.outputs.version }}
     - name: Check download content
       run: ls -lsta
