--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -12,6 +12,10 @@ on:
         # See: https://docs.github.com/en/actions/writing-workflows/workflow-syntax-for-github-actions#filter-pattern-cheat-sheet
         - feature/**
         - release/**
+env:
+  DB_URL: url
+  DB_USER: user
+  DB_PASSWORD: password
 # jobs is what process should this workflow do
 jobs: 
   # the job name
