--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -39,18 +39,18 @@ jobs:
       run: mvn  --batch-mode --errors --fail-at-end --show-version -DinstallAtEnd=false -DdeployAtEnd=false -Drevision=$VERSION clean compile
     - name: Test
       run: mvn  --batch-mode --errors --fail-at-end --show-version -DinstallAtEnd=false -DdeployAtEnd=false -Drevision=$VERSION clean verify
-    - name: Upload test result
-      if: success() || failure()
-      uses: actions/upload-artifact@v4
-      with:
-        name: com/mahendracandi/github_actions_demo
-        path: target/failsafe-reports/*
+#    - name: Upload test result
+#      if: success() || failure()
+#      uses: actions/upload-artifact@v4
+#      with:
+#        name: com/mahendracandi/github_actions_demo
+#        path: target/failsafe-reports/*
     - name: Check test result
       uses: dorny/test-reporter@v2
       with:
-        artifact: failsafe-reports
+#        artifact: failsafe-reports
         name: JUnit Test
-        path: com/mahendracandi/github_actions_demo/TEST-*.xml
+        path: target/failsafe-reports/*.xml
         reporter: java-junit
 
   # if second job presented in the workflow, it will be run parallel with the first job
