Add running command

--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -89,3 +89,7 @@ jobs:
         name: ${{ needs.build.outputs.app_name }}-${{ needs.build.outputs.version }}
     - name: Check download content
       run: pwd & ls -lsta
+    - name: Running Jar
+      run: |
+        pkill -f ${{ needs.build.outputs.app_name }}-*\.jar || true
+        nohup java -jar ${{ needs.build.outputs.app_name }}-${{ needs.build.outputs.version }}.jar -DDB_URL=$DB_URL -DDB_USER=$DB_USER -DDB_PASSWORD=$DB_PASSWORD > app.log 2>&1 &
