--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -92,4 +92,4 @@ jobs:
     - name: Running Jar
       run: |
         pkill -f ${{ needs.build.outputs.app_name }}-*\.jar || true
-        nohup java -jar ${{ needs.build.outputs.app_name }}-${{ needs.build.outputs.version }}.jar -DDB_URL=$DB_URL -DDB_USER=$DB_USER -DDB_PASSWORD=$DB_PASSWORD > app.log 2>&1 &
+        nohup java -jar ${{ needs.build.outputs.app_name }}-${{ needs.build.outputs.version }}.jar --DB_URL=$DB_URL --DB_USER=$DB_USER --DB_PASSWORD=$DB_PASSWORD > app.log 2>&1 &
