--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -88,7 +88,7 @@ jobs:
       with:
         name: ${{ needs.build.outputs.app_name }}-${{ needs.build.outputs.version }}
     - name: Check download content
-      run: pwd & ls -lsta
+      run: pwd & ls -lsta & whoami & echo $SHELL
     - name: Kill exisiting Jar
       run: pkill -f ${{ needs.build.outputs.app_name }}-*\.jar || true
     - name: Run Jar
