--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=github-actions-demo
+server.port=${PORT:8080}
 
 database.properties.db.url=${DB_URL}
 database.properties.db.username=${DB_USER}
